posiGen_FullsendBox/src/objects/Payout_Batch__c.object
<CustomObject>
    <fields>
        <fullName>ActualPayOutDate__c</fullName>
        <label>Actual Payout Batch Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Payout_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Import_Notes__c</fullName>
        <label>Import Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduledPayoutDate__c</fullName>
        <label>Scheduled Payout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This determines if the Payout Batch</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Select Items to Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted To Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trigger_Payout_Creation__c</fullName>
        <formula>&quot;https://test.com/?payout_id=&quot; &amp;  Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trigger Payout Creation</label>
        <type>Text</type>
    </fields>
    <label>Payout Batch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>ScheduledPayoutDate__c</columns>
        <columns>ActualPayOutDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PayoutBatch-{00000}</displayFormat>
        <label>Payout Batch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payout Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>